--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "homebridge-plugin-name",
-  "displayName": "Plugin Name",
+  "name": "homebridge-simple-router-status",
+  "displayName": "Simple Router Status",
   "type": "module",
   "version": "1.0.0",
-  "private": true,
   "description": "A short description about what your plugin does.",
   "author": "Your Name",
   "license": "Apache-2.0",
-  "homepage": "https://github.com/USERNAME/GITHUB_PROJECT_NAME#readme",
+  "homepage": "https://github.com/adrianjagielak/homebridge-simple-router-status#readme",
   "repository": {
     "type": "git",
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "https://github.com/adrianjagielak/homebridge-simple-router-status.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/adrianjagielak/homebridge-simple-router-status/issues"
   },
   "keywords": [
     "homebridge-plugin"
